--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   
   <div class="field">
-    <%= f.input :content, :as => :ckeditor, :input_html => { :ckeditor => { :height => 400, :toolbar => 'mini' } } %>
+    <%= f.input :content, :as => :ckeditor, :input_html => { :ckeditor => { :height => 400, filebrowserImageBrowseUrl: '/ckeditor/pictures', filebrowserImageUploadUrl: '/ckeditor/pictures' } } %>
   </div>
 
   <div class="actions">
