--- a/app/views/hearing_conferences/index.html.erb
+++ b/app/views/hearing_conferences/index.html.erb
@@ -36,4 +36,5 @@
 
 <br>
 
-<%= link_to 'New Hearing conference', new_hearing_conference_path %>
+<%= link_to 'New Hearing conference', new_hearing_conference_path %> |
+<%= link_to "專文", posts_path %>
