--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,6 +12,7 @@
   <tbody>
     <% @posts.each do |post| %>
       <tr>
+        <td><%= post.title %></td>
         <td><%= raw(post.content) %></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
