--- a/app/views/hearing_conferences/_form.html.erb
+++ b/app/views/hearing_conferences/_form.html.erb
@@ -44,7 +44,7 @@
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
-  <%= f.input :tag_list, :input_html => { :id => 'tags_1', :data => { :role => "tagsinput" }}, :label => "標籤" %>
+  <%= f.input :tag_list, :input_html => { :id => 'tags_1', :data => { :role => 'tagsinput' }}, :label => "標籤" %>
   <div class="actions">
     <%= f.submit %>
   </div>
