--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>PublicHearing</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
- 	<% if current_user %>
-		Signed in as <strong><%= current_user.name %></strong>!
-		<%= link_to "Sign out", signout_path, id: "sign_out" %>
-	<% else %>
-		<%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
-	<% end %>
-	
-<%= yield %>
-
-</body>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= content_for?(:title) ? yield(:title) : "Public Hearing" %></title>
+    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Public Hearing" %>">
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+    <header>
+      <%= render 'layouts/navigation' %>
+    </header>
+    <main role="main">
+       <%= render 'layouts/messages' %>
+       <%= yield %>
+    </main>
+  </body>
 </html>
