--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,26 +1,14 @@
 <h1>Listing posts</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
     <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= image_tag post.cover_photo, :size => "20x20" %>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 pin_space">
+        <h2 class="text-center"><%= link_to post.title, post %></h2>
+        <%= link_to image_tag(post.cover_photo), post, :class => "img-thumbnail img_padding" %>
+          <!-- <%= link_to 'Show', post %> -->
+          <!-- <%= link_to 'Edit', edit_post_path(post) %> -->
+          <!-- <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %> -->
     <% end %>
-  </tbody>
-</table>
+  </div>
 
 <br>
 
