--- a/app/views/hearing_conferences/_form.html.erb
+++ b/app/views/hearing_conferences/_form.html.erb
@@ -25,6 +25,9 @@
     <%= f.date_select :happen_date %>
   </div>
   <div class="field">
+    <%= f.input :photo %>
+  </div>
+  <div class="field">
     <%= f.label :count %><br>
     <%= f.number_field :count %>
   </div>
