--- a/app/views/hearing_conferences/show.html.erb
+++ b/app/views/hearing_conferences/show.html.erb
@@ -1,21 +1,9 @@
-<!DOCTYPE HTML>
-
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <!--[if lt IE 9]>
-        <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta charset="utf-8">
-        
         <!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/bootstrap.css" rel="stylesheet">
         <link href="css/bootstrap-responsive.css" rel="stylesheet">
         <link href="css/carousel.css" rel="stylesheet">
         <link href="css/menu.css" rel="stylesheet">
-
-
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -27,11 +15,6 @@
 
         <link rel="stylesheet" type="text/css" href="css/pb.css">
 
-
-    </head>
-    
-    <body>
-    <nav> </nav>
     <div class="container marketing">
 
         <section class ="newsWall">
@@ -121,7 +104,7 @@
               <div class="txt_tab" id="tab4">《海峽兩岸服務貿易協議》（英語譯名：Cross-Strait Service Trade Agreement [1]，簡稱CSSTA），是海峽兩岸依據《海峽兩岸經濟合作架構協議》（簡稱ECFA）第四條所簽署的服務貿易協定。2011年3月，兩岸的經貿業務主管部門開始展開服務貿易磋商並達成共識。2012年8月9日舉行的兩岸兩會第八次高層會談上，雙方同意在達成關於該協議文本和市場開放項目的共識後正式簽署。2013年6月21日，兩岸兩會在中國大陸上海市舉行第九次高層會談並簽署該協議，也向外界公布了開放清單。在台灣，由於部分人士擔憂該協議可能使台灣在經濟與政治上更容易被相對缺乏自由的中國大陸影響，加上官方在該協議簽訂前對民間溝通不足，因而導致兩岸服務貿易協議存查爭議與太陽花學運的發生，也使該協議在台灣社會造成廣泛的爭議和討論。
               </div>
               <div class="txt_tab" id="tab5">
-               <script src="https://publichear.hackpad.com/kwerYO9jkiK.js"></script><noscript><div>View <a href="https://publichear.hackpad.com/kwerYO9jkiK">Welcome to hackpad - the collaborative notepad</a> on Hackpad.</div></noscript>
+               <!-- // <script src="https://publichear.hackpad.com/kwerYO9jkiK.js"></script><noscript><div>View <a href="https://publichear.hackpad.com/kwerYO9jkiK">Welcome to hackpad - the collaborative notepad</a> on Hackpad.</div></noscript> -->
               </div>
             </div>
         </section>
@@ -144,21 +127,21 @@
 
          <!-- Three columns of text below the carousel -->
         <div class="row">
-            <div class="span3">
+            <div class="col-sm-8 col-sm-offset-2 col-md-3 col-md-offset-1">
                 <img class="img-circle" src="http://i.imgur.com/9rBFY5N.png">
                 <h2>標題／作者一</h2>
                 <p>C'est le temps que tu as perdu pour ta rose qui fait ta rose si important.C'est le temps que tu as perdu pour ta rose qui fait ta rose si important.C'est le temps que tu as perdu pour ta rose. </p>
                 <p><a class="btn" href="#">View&raquo;</a></p>
             </div>
             <!-- /.span4 -->
-            <div class="span3">
+            <div class="col-sm-8 col-sm-offset-2 col-md-3 col-md-offset-1">
                 <img class="img-circle" src="http://i.imgur.com/p1TdyQO.png" >
                 <h2>標題／作者二</h2>
                 <p>C'est le temps que tu as perdu pour ta rose qui fait ta rose si important.C'est le temps que tu as perdu pour ta rose qui fait ta rose si important.C'est le temps que tu as perdu pour ta rose. </p>
                 <p><a class="btn" href="#">View&raquo;</a></p>
             </div>
             <!-- /.span4 -->
-            <div class="span3">
+            <div class="col-sm-8 col-sm-offset-2 col-md-3 col-md-offset-1">
                 <img class="img-circle" src="http://i.imgur.com/kACmMbb.png">
                 <h2>標題／作者三</h2>
                 <p>C'est le temps que tu as perdu pour ta rose qui fait ta rose si important.C'est le temps que tu as perdu pour ta rose qui fait ta rose si important.C'est le temps que tu as perdu pour ta rose.</p>
@@ -175,7 +158,7 @@
 
          <!-- Three columns of text below the carousel -->
         <div class="row">
-            <div class="span3">
+            <div class="col-sm-8 col-sm-offset-2 col-md-3 col-md-offset-1">
                 <img class="img-circle" src="http://i.imgur.com/3o5inFs.png">
                 <h2>公聽會第六場 <br>證券、期貨及其相關服務業</h2>
                 <p>102年10月3日（星期四）15時3分至16時36分立法院第8屆第4會期內政、外交及國防、經濟、財政、教育及文化、交通、司法及法制、社會福利及衛生環境八委員會「海峽兩岸服務貿易協議」公聽會（第六場）會議紀錄
@@ -184,7 +167,7 @@
                 <p><a class="btn" href="#">View&raquo;</a></p>
             </div>
             <!-- /.span4 -->
-            <div class="span3">
+            <div class="col-sm-8 col-sm-offset-2 col-md-3 col-md-offset-1">
                 <img class="img-circle" src="http://i.imgur.com/3o5inFs.png" >
                 <h2>公聽會第二場 <br>海運、公路運輸</h2>
                 <p>102年9月30日（星期一）14時34分至17時36分立法院第8屆第4會期內政、外交及國防、經濟、財政、教育及文化、交通、司法及法制、社會福利及衛生環境八委員會「海峽兩岸服務貿易協議」 
@@ -192,7 +175,7 @@
                 <p><a class="btn" href="#">View&raquo;</a></p>
             </div>
             <!-- /.span4 -->
-            <div class="span3">
+            <div class="col-sm-8 col-sm-offset-2 col-md-3 col-md-offset-1">
                 <img class="img-circle" src="http://i.imgur.com/3o5inFs.png">
                 <h2>公聽會第七場 <br>快遞、空運、貨物集散與承攬</h2>
                 <p>102年10月7日（星期一）9時1分至11時25分立法院第8屆第4會期內政、外交及國防、經濟、財政、教育及文化、交通、司法及法制、社會福利及衛生環境八委員會「海峽兩岸服務貿易協議」公聽會（第七場）會議紀錄
@@ -208,9 +191,19 @@
 
 
     </div>
-    </body>
-</html>
-
+<script type="text/javascript">
+  $(document).ready(function(){
+  $('div#txt_cont div:gt(0)').css('display', 'none');
+  $('#menu ul li a').click(function(event){
+    event.preventDefault();
+    var id_tab = $(this).attr('href');
+    $('#menu ul li a').removeClass('hover_tab');
+    $(this).addClass('hover_tab');
+    $('div.txt_tab:visible').hide();
+    $(id_tab).show('slide');
+  });
+});
+</script>
  <div id="disqus_thread"></div>
  <!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
