--- a/app/views/hearing_conferences/show.html.erb
+++ b/app/views/hearing_conferences/show.html.erb
@@ -1,19 +1,3 @@
-        <!-- Bootstrap -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/bootstrap.css" rel="stylesheet">
-        <link href="css/bootstrap-responsive.css" rel="stylesheet">
-        <link href="css/carousel.css" rel="stylesheet">
-        <link href="css/menu.css" rel="stylesheet">
-
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/menu.js"></script>
-        <script src="js/pb.js"></script>
-
-            <title>Hello, here is public hearing.</title>
-
-        <link rel="stylesheet" type="text/css" href="css/pb.css">
 
     <div class="container marketing">
 
@@ -104,7 +88,7 @@
               <div class="txt_tab" id="tab4">《海峽兩岸服務貿易協議》（英語譯名：Cross-Strait Service Trade Agreement [1]，簡稱CSSTA），是海峽兩岸依據《海峽兩岸經濟合作架構協議》（簡稱ECFA）第四條所簽署的服務貿易協定。2011年3月，兩岸的經貿業務主管部門開始展開服務貿易磋商並達成共識。2012年8月9日舉行的兩岸兩會第八次高層會談上，雙方同意在達成關於該協議文本和市場開放項目的共識後正式簽署。2013年6月21日，兩岸兩會在中國大陸上海市舉行第九次高層會談並簽署該協議，也向外界公布了開放清單。在台灣，由於部分人士擔憂該協議可能使台灣在經濟與政治上更容易被相對缺乏自由的中國大陸影響，加上官方在該協議簽訂前對民間溝通不足，因而導致兩岸服務貿易協議存查爭議與太陽花學運的發生，也使該協議在台灣社會造成廣泛的爭議和討論。
               </div>
               <div class="txt_tab" id="tab5">
-               <!-- // <script src="https://publichear.hackpad.com/kwerYO9jkiK.js"></script><noscript><div>View <a href="https://publichear.hackpad.com/kwerYO9jkiK">Welcome to hackpad - the collaborative notepad</a> on Hackpad.</div></noscript> -->
+               <script src="https://publichear.hackpad.com/kwerYO9jkiK.js"></script><noscript><div>View <a href="https://publichear.hackpad.com/kwerYO9jkiK">Welcome to hackpad - the collaborative notepad</a> on Hackpad.</div></noscript>
               </div>
             </div>
         </section>
