add config.js textcolor fix hearing_conference_id

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-    <%= f.hidden_field :public_hearing_id, :value => params[:hearing_conference_id] %>
+    <%= f.hidden_field :hearing_conference_id, :value => params[:hearing_conference_id] %>
   <div class="field">
     <%= f.label :title %><br>
     <%= f.text_field :title %>
