--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,22 @@
-<div class="indexslider">
-<img src="/assets/index.jpg" title="publichearing" height="768">
+<div style="background-color:#d7d7d7">
+  <!-- Start WOWSlider.com BODY section -->
+  <div id="wowslider-container1">
+  <div class="ws_images"><ul>
+<li><img src="assets/indexslide.png" alt="台灣公聽會 資訊百老匯" title="台灣公聽會 資訊百老匯" id="wows1_0"/>為了對抗老謀深算的政府，身為軍師的你，準備好策略對抗了嗎？還是你能更高招的創造雙贏？</li>
+<li><img src="assets/img4.jpg" alt="大安溪公聽會" title="大安溪公聽會" id="wows1_1"/>台灣雲豹已經絕種了，下一個又是誰呢?</li>
+<li><img src="assets/img5.jpg" alt="核四公聽會" title="核四公聽會" id="wows1_2"/>日本福島仍舊無法恢復，同樣處在地震帶的台灣，又該如何?</li>
+</ul></div>
+<div class="ws_bullets"><div>
+<a href="#" title="台灣公聽會 資訊百老匯"><img src="assets/indexslidee.png" alt="台灣公聽會 資訊百老匯"/>1</a>
+<a href="#" title="大安溪公聽會"><img src="assets/img44.jpg" alt="大安溪公聽會"/>2</a>
+<a href="#" title="核四公聽會"><img src="assets/img55.jpg" alt="核四公聽會"/>3</a>
+</div></div>
+  <div class="ws_shadow"></div>
+  </div>
+  <!-- End WOWSlider.com BODY section -->
+  <script type="text/javascript">
+$("#wowslider-container1").wowSlider({effect:"blinds",prev:"",next:"",duration:20*100,delay:20*100,width:1200,height:650,autoPlay:true,stopOnHover:false,loop:false,bullets:true,caption:true,captionEffect:"slide",controls:true,onBeforeStep:0,images:0});
+  </script>
 </div>
 <div class="container">
 
