--- a/app/views/hearing_conferences/show.html.erb
+++ b/app/views/hearing_conferences/show.html.erb
@@ -1,19 +1,15 @@
 
     <div class="container marketing">
-
         <section class ="newsWall">
+        <h1>戰役全記錄</h1>
             <div class="topNews">
-            <img src="http://twimg.edgesuite.net/images/ReNews/20140330/640_88c4df05cb68a4588db46f06267e1cba.jpg"/>
+            <img src="/assets/img6.jpg"/>
             <div class="viedo"> VIEDO沒影片的我晚點再寫喲>_^ </div>
-            
             </div>
 
             <div class="data"> 
-              <h1> 第三場 醫療、技術檢測與分析服務業、社會服務業、醫療器材 </h1>
-              <div> 時間：102年10月2日（星期三）9時4分至12時17分 <br> 地點：紅樓202會議室 <br> 主席：張委員慶忠<br>立法院第8屆第4會期內政、外交及國防、經濟、財政、教育及文化、交通、司法及法制、社會福利及衛生環境八委員會「海峽兩岸服務貿易協議」公聽會（第一場）會議紀錄
-
-
-
+              <h1> 戰役名稱：「石化工業政策評估說明書」公聽會 </h1>
+              <div> 開戰時間：100 年 2 月 11 日(星期五)上午 9 時 30 分 <br> 戰役地點：行政院環境保護署 4 樓第 5 會議室  <br> 戰役主席：邱文彥<br>戰場焦點：石化工業政策為指導性計畫，為通過前應先將個案（國光石化、六輕五期等）審查暫停，否則在指導性計畫通過前先通過個案環評將有違公正性。而近年來台灣的政策綱領即為節能減碳，然而石化政策評估卻絲毫沒有提到，是否有違此發展政策？而整份石化政策的評估報告書十分簡略，甚至玩起數字遊戲，讓人民更無法信任政府舉辦公聽會的誠意。
               </div>
 
             </div>
@@ -39,7 +35,7 @@
                     <input type="radio" id="tab_1" class="radio" name="tab_group_1" />
                     <label for="tab_1" class="tab-button"></label>
                     <section id="tab_frame_1" class="tab-frame">
-                      <p>　這是我對兩岸服貿協議做第一次發言，看到服貿協議的內容，事實上涵蓋範圍非常廣泛，同時服務業佔醫療產業或我們目前從事的產業中比例是很高的，據我所知，這與在大陸地區發展的情況是完全不對等的，我們從事這行業有三方面，第一是租賃業，第二是經銷代理業，全國聯合會主要也就是從事所有醫療相關用品的經銷或買賣，也就是我們過去所了解貿易的行業，與生產製造業完全是兩回事，第三，我們從事的是一種通路業，目前在日用品或醫療用品已經慢慢形成通路，已經建構了服務平台。</p>
+                      <p>　政策環評程序2009 年全國能源會議之共識意見指出「能源密集產業設置應依規定儘速完成「能源密集產業發展政策」之政策環評，減少產業重大投資案之爭議。進行政策環評時並應召開聽證會。」而石化工業政策環評過程，僅召開公聽會，並未舉行聽證程序。故應依行政程序法，舉辦聽證會後，方可提送行政院環境保護署（以下簡稱環保署）審查。</p>
                     </section>
                   </article>
                   <!-- TAB 2 -->
@@ -47,7 +43,7 @@
                     <input type="radio" id="tab_2" class="radio" name="tab_group_1" />
                     <label for="tab_2" class="tab-button"></label>
                     <section id="tab_frame_2" class="tab-frame">
-                      <p>其次，在決策過程，亦即我們產品或生意要推廣時，事實上經過的路徑是完全不同，目前在台灣大部分是以中小企業為主，商業交易模式是開放的平台，也就是在取得機會的同時，決策者的模式是不同的，基本上是符合資格後，就以價格來決定是否取得該筆生意，但是在大陸的情況則是大不相同，人治色彩濃厚，我們在醫療法規等條件都不了解，或是過程都不同的情況下開放，未來將會有較大的衝擊，原因就是在決策的過程中，大陸的考量是比較長遠的，要維持生意一定會先考慮是否賺錢，如果大陸的政策是以資金導入，以長期策略考量來看，那進入這產業的門檻是相對非常低的，也就是說他可以忍受比較長遠的虧損來取得市場占有率以及長期服務的機會，這樣對我國中小企業發展將有致命性的障礙與影響。</p>
+                      <p>現行公聽會議程根本無法實問實答，充分討論甚至連「爭點」都沒有；若行政院環境保護署無法拿出肩膀舉辦聽證，至少應參考「預備聽證」程序，先舉行「範疇界定」，釐清爭點，專家人選、議程進行方式。</p>
                     </section>
                   </article>
                   <!-- TAB 3 -->
@@ -55,7 +51,7 @@
                     <input type="radio" id="tab_3" class="radio" name="tab_group_1" checked />
                     <label for="tab_3" class="tab-button"></label>
                     <section id="tab_frame_3" class="tab-frame">
-                      <p>第三，在經銷方面，過去在許多管理階層，無論產品內容、公司內容或代理內容，常常都是以香港、新加坡或台灣作管理人才的發展，但過去20年來，台灣人到大陸後，因為對岸是屬於人治社會且不開放的情況下，許多規定受到層層審批及考驗，要在行業中嶄露頭角，是相對困難的事，以上報告有關在長遠的策略上，顯然在決策的過程是不同的，再者在競爭上也相對是弱勢的，第三部分，如果要開放的話，雖然國家有國家的考量，但從長遠來說，我們應該知道，一旦開放後要再取消是不可能的，因此是否可以以對等方式辦理。在租賃業、通路業及經銷業上面的內容裡看到只有台灣開放，但對岸卻沒有開放，這一點是比較細節的部分，希望政府部門是不是審批這部分，要從小而大，而不是從大而小，這應該是不可為的，以上報告，謝謝。</p>
+                      <p>從前面環保署也承認，政策環評與個案環評雖不同，但仍有相當的關聯性，從前面得知石化政策環評如此錯誤百出，如果上位政策環評之爭議無法釐清，下位個案之環評要怎麼做，會不會牴觸政策環評，這個國家是ㄧ個非常危險的，如果在政策環評確認之前就做個案環評，從以前許多例證（八輕、六輕五期等）可以得知，如果是基於ㄧ個不充分、不正確的資訊作出的結論，這樣的行政處分，是有瑕疵的結論，後續法律的效益如何？從過去之案例得知，殷鑑不遠了。</p>
                     </section>
                   </article>
                   <!-- TAB 4 -->
@@ -63,7 +59,7 @@
                     <input type="radio" id="tab_4" class="radio" name="tab_group_1" />
                     <label for="tab_4" class="tab-button"></label>
                     <section id="tab_frame_4" class="tab-frame">
-                      <p>曾億郎秘書：主席、各位委員。醫療市場在某種程度上是特殊性與半壟斷性的，並有進入性的障礙，因此相較於其他產業市場是有所不同的。在全世界各國，都有兩個行業是管制最嚴格的，第一就是銀行業，第二是醫療業，這是什麼緣故呢？這是因為一者管你的「錢」，另一者是管你的是「命」，因此這次要簽署服務貿易協議，就一定要相當審慎。以本次簽署的整個服務提供模式內容來看，第一，跨境提供服務，這原則上是不可行的，原因是醫療業不是隔空抓藥的，所以不可能提供跨境服務。第二，關於境外消費的問題，假若到大陸旅遊，勢必在遇到受傷狀況時，也必須要境外消費，這部分也是目前已經存在的。</p>
+                      <p>石化工業發展願景之一，維持國內雙石化體系均衡發展，純粹是為中油投資國光石化找藉口。 依「評估說明書」，目前雙石化體系不均，若泛中油體系增加產能，則得以驅使廠商間之良性競爭。何謂「良性競爭」？以目前中油與台塑兩家石油公司的油價同漲同跌，亦步亦趨的情況來看，兩個體系只不過是形成聯合壟斷而已，何來「良性競爭」？</p>
                     </section>
                   </article>
                   <!-- TAB 5 -->
@@ -71,21 +67,26 @@
                     <input type="radio" id="tab_5" class="radio" name="tab_group_1" />
                     <label for="tab_5" class="tab-button"></label>
                     <section id="tab_frame_5" class="tab-frame">
-                      <p>而第四點的自然人呈現，原則上兩岸都不提供，大家所著重的是第三點，關於商業據點呈現這部分，先從大陸開放的地區來看，自2010年大陸公布「臺灣服務提供者在大陸設立獨資醫院管理暫行辦法」以後，允許在5個地區設立台資獨資醫院，到這次服貿協議開放4個直轄市及22個省會。大家以為這個餅很大，看的到也吃的到。大陸還有審批制度，不管是從中央部會還是省衛生廳審批，另外還有大陸有關醫療人員、藥物、保險制度的潛規則。所以，短期內能進入大陸市場並不容易。反觀台灣地區目前開放財團法人醫院投資相關規定，對此有兩點聲明，第一，規定內僅規範大陸地區人民與外國人擔任董事之人數合計不得超過董事會總額1/3，但對此要如何明確的執行，請相關主管官署作有效管理。</p>
+                      <p>關於問卷部分，建議重做。雖然是從 99 年就開始做，但問卷樣本 50%在臺北市，剩下的在彰化、高雄，更少部分在其他地區，如此的問卷分配比率讓人驚訝，我們都知道石化工業的重鎮是在高雄，現在還有一個是在雲林，並不是在臺北，因此，如此的問卷設計有失妥當。另外，由於八輕案，濕地、白海豚、信託問題已經受到越來越多人的重視，相信重做問卷會反映出更多人對石化政策環評的不支持。僅管如此，以目前的問卷結果顯示，民眾接受度覺得不好的，已有一半以上，建議重做政策環評，更不應通過。</p>
                     </section>
                   </article>
                 </section>
               </div>
 
-              <div class="txt_tab" id="tab2"><br>問：服貿通過，到底對身為醫師的我，好不好？<br><br>
-            答：首先，「開放與貿易自由化」不等於服貿，服貿也不等於黑箱服貿。......<br><br>
+              <div class="txt_tab" id="tab2"><br>問：國光石化所開發的地點似乎與白海豚的棲息地有相當的重疊性，請問政府是如何回應相關問題呢？<br>
+            答：本場公聽會絲毫沒有解答。主席邱文彥表示會在下一次公聽會回答相關問題。<br><br>
+            問：國光石化政策為指導性的計畫，但是六輕等都同時在進行環評，這樣萬一個案環評先過了怎麼辦？<br>
+答：石化政策環評如此錯誤百出，如果上位政策環評之爭議無法釐清，下位個案之環評要怎麼做，會不會牴觸政策環評，這個國家是ㄧ個非常危險的，如果在政策環評確認之前就做個案環評，從以前許多例證（八輕、六輕五期等）可以得知，如果是基於ㄧ個不充分、不正確的資訊作出的結論，這樣的行政處分，是有瑕疵的結論。<br><br>
  
               </div>
               <div class="txt_tab" id="tab3">
-                <img style="float:left; margin:2px 6px 2px 0" src="http://quellidelcucuzzolo.altervista.org/demo/tab-menu-jquery/img/landscape.jpg" alt="" width="138" height="91" />攝影人員：3名（缺1人）<br>拍照人員：2名（缺1人）<br>代表提問人員：3名（缺人）<br>
+                <img style="float:left; margin:2px 6px 2px 0" src="http://quellidelcucuzzolo.altervista.org/demo/tab-menu-jquery/img/landscape.jpg" alt="" width="138" height="91" />公聽會已舉行完畢！尚缺影片連結<br><br>
 
               </div>
-              <div class="txt_tab" id="tab4">《海峽兩岸服務貿易協議》（英語譯名：Cross-Strait Service Trade Agreement [1]，簡稱CSSTA），是海峽兩岸依據《海峽兩岸經濟合作架構協議》（簡稱ECFA）第四條所簽署的服務貿易協定。2011年3月，兩岸的經貿業務主管部門開始展開服務貿易磋商並達成共識。2012年8月9日舉行的兩岸兩會第八次高層會談上，雙方同意在達成關於該協議文本和市場開放項目的共識後正式簽署。2013年6月21日，兩岸兩會在中國大陸上海市舉行第九次高層會談並簽署該協議，也向外界公布了開放清單。在台灣，由於部分人士擔憂該協議可能使台灣在經濟與政治上更容易被相對缺乏自由的中國大陸影響，加上官方在該協議簽訂前對民間溝通不足，因而導致兩岸服務貿易協議存查爭議與太陽花學運的發生，也使該協議在台灣社會造成廣泛的爭議和討論。
+              <div class="txt_tab" id="tab4">國光石化開發案原來預定投資新台幣9,336億元，後來修正為新台幣6,325億元[3]。工業區中含煉油（Refinery）廠、烯烴（Olefins）廠、芳香烴（Aromatics）廠及中下游工廠，其目的之一是搬遷目前位於高雄市楠梓區的高雄煉油廠及其所屬之「五輕」。
+2006年，民進黨蘇貞昌擔任行政院長後，宣布啟動「大投資、大溫暖」計畫並將國光石化開發案列為該計畫重大開發案之一。2007年3月29日，行政院副院長蔡英文在行政院財經小組會議因台鋼案及國光石化案環評冗長對環保署開砲，要求環保署宜在兼顧環保、產業發展兼籌並顧的原則下，研議簡化環評流程並使之透明化[4]。後來鑑於在雲林離島工業區建廠之環評、購地等各方面的困難，再加上彰化縣政府的積極爭取，2007年11月30日行政院副院長邱義仁決定國光石化由雲林台西鄉改至彰化縣大城鄉。2008年1月25日發函，將石化科技園區自雲林工業區移至彰化西南角海埔工業區；經濟部2008年3月18日函送行政院，經建會於2008月4月14日召開會議同意，並將彰化大城工業區列為國家重大計劃，藉以避免受禁止開發海埔新生地的保育禁令限制以利此案能填海造陸興建國光石化園區。不過後來政權即將輪替，民進黨政府臨時喊卡，行政院以「內閣即將改組，列為重大計畫茲事體大」為由，在2008年5月14日函覆指示經濟部，依未來國家整體規畫審視後再報院；把此一提案留待新政府決定。
+政權輪替後，國光石化董事會於2008年6月24日決議將努力多年的雲林離島工業區建廠計畫轉向彰化縣大城鄉，但要求政府保證2015年能如期投產，否則股東將會撤資。據2008年12月1日報載，為了發展經濟, 行政院以專案將國光石化開發案核定列為國家重大投資計畫[5][6]。2011年4月3日，身為總統的馬英九，以及民進黨代表蘇貞昌和蔡英文參加在彰化的反國光石化餐會，馬英九因為不願簽署承諾書，發言被主持人以及台下群眾打斷，蘇貞昌及蔡英文則是當場簽署反國光石化的承諾書。
+2011年4月22日，馬英九親自宣布不支持國光石化案在彰化縣繼續進行[7]。雲林縣、高雄市憂心國光石化移往轄內，也在隨後立即表態不歡迎。
               </div>
               <div class="txt_tab" id="tab5">
                <script src="https://publichear.hackpad.com/kwerYO9jkiK.js"></script><noscript><div>View <a href="https://publichear.hackpad.com/kwerYO9jkiK">Welcome to hackpad - the collaborative notepad</a> on Hackpad.</div></noscript>
@@ -94,12 +95,13 @@
         </section>
 
         <section class="forum">
+          <h1>討論區</h1>
          <div id="disqus_thread"></div>
         </section>
 
 
         <section class="nowArticle">
-            <h1> 現場專文 </h1>
+            <h1> 相關戰況分析 </h1>
 
          <!-- Three columns of text below the carousel -->
         <div class="row">
@@ -128,9 +130,9 @@
         <!-- /.row -->
 
         </section>
-
+        <%= link_to "撰寫自己的戰況分析", new_hearing_conference_post_path(:hearing_conference_id => params[:id]), class: "btn btn-danger btn-lg btn-block" %>
         <section class="seriesNews">
-            <h1> 系列與相關公聽會 </h1>
+            <h1> 相關及系列公聽會戰役 </h1>
 
          <!-- Three columns of text below the carousel -->
         <div class="row">
