--- a/app/views/main/search.html.erb
+++ b/app/views/main/search.html.erb
@@ -64,11 +64,11 @@ nav{
   </div>
   
   <div class="grid_8">
-       <a href="http://ghusse.github.io/jQRangeSlider/stable/demo/" class="search_a"><div class="all">
-    <p><img src="http://payload208.cargocollective.com/1/11/380934/6468832/Untitled-3.png" class="search_img">
-         <p class="time">5/13 1800</p>
-         <p class="name">公聽會名稱</p>      
-         <p class="about">Recently I was trying to create a web form where a user could enter a start time and end time to create a time window for a schedule. However, the easiest solution – having a user enter the times into two text boxes – seemed clunky and annoying to use.</p></p>
+       <a href="http://public-hearing.herokuapp.com/hearing_conferences/6" class="search_a"><div class="all">
+    <p><img src="assets/img6.jpg" class="search_img">
+         <p class="time">100 年 2 月 11 日(星期五)<br>上午 9 時 30 分</p>
+         <p class="name">「石化工業政策評估說明書」</p>      
+         <p class="about">石化工業政策為指導性計畫，為通過前應先將個案（國光石化、六輕五期等）審查暫停，否則在指導性計畫通過前先通過個案環評將有違公正性。而近年來台灣的政策綱領即為節能減碳，然而石化政策評估卻絲毫沒有提到，是否有違此發展政策？而整份石化政策的評估報告書十分簡略，甚至玩起數字遊戲，讓人民更無法信任政府舉辦公聽會的誠意。</p></p>
     </a></div>
     
     <div class="all">
