--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -5,7 +5,7 @@
 <li><img src="assets/indexslide.png" alt="台灣公聽會 資訊百老匯" title="台灣公聽會 資訊百老匯" id="wows1_0"/>為了對抗老謀深算的政府，身為軍師的你，準備好策略對抗了嗎？還是你能更高招的創造雙贏？</li>
 <li><img src="assets/img4.jpg" alt="大安溪公聽會" title="大安溪公聽會" id="wows1_1"/>台灣雲豹已經絕種了，下一個又是誰呢?</li>
 <li><img src="assets/img5.jpg" alt="核四公聽會" title="核四公聽會" id="wows1_2"/>日本福島仍舊無法恢復，同樣處在地震帶的台灣，又該如何?</li>
-<li><img src="assets/img6.jpg" alt="「石化工業政策評估說明書」公聽會草草結束" title="「石化工業政策評估說明書」公聽會草草結束" id="wows1_3" />
+<li><a href="http://public-hearing.herokuapp.com/hearing_conferences/6"><img src="assets/img6.jpg" alt="「石化工業政策評估說明書」公聽會草草結束" title="「石化工業政策評估說明書」公聽會草草結束" id="wows1_3" /></a>
   100/02/11<br>原定一整天的會議舉行四個小時即結束，節能減碳的政策綱領是否有遵守？只剩100隻的白海豚未來又何去何從？</li>
 </ul></div>
 <div class="ws_bullets"><div>
