--- a/app/views/hearing_conferences/show.html.erb
+++ b/app/views/hearing_conferences/show.html.erb
@@ -107,9 +107,9 @@
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2 col-md-3 col-md-offset-1">
                 <img class="img-circle" src="http://i.imgur.com/9rBFY5N.png">
-                <h2>標題／作者一</h2>
-                <p>C'est le temps que tu as perdu pour ta rose qui fait ta rose si important.C'est le temps que tu as perdu pour ta rose qui fait ta rose si important.C'est le temps que tu as perdu pour ta rose. </p>
-                <p><a class="btn" href="#">View&raquo;</a></p>
+                <h2>石化業是否符合節能減碳的政策綱領？／心萍一</h2>
+                <p>環保署今天舉行「石化工業政策評估說明會」公聽會，多位學者對於經濟部工業局提出的乙烯自給率計算模式、石化產業與經濟及就業關聯性、以及工業局支持國光石化的雙石化體系是否合理等有不同看法... </p>
+                <p><a class="btn" href="public-hearing.herokuapp.com/posts/8">View&raquo;</a></p>
             </div>
             <!-- /.span4 -->
             <div class="col-sm-8 col-sm-offset-2 col-md-3 col-md-offset-1">
