fix background and link in post show

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,6 +25,8 @@
   background-image: url("background.jpg");
   background-repeat:no-repeat;
   min-height: 550px;
+  border:none;
+  margin:0;
  	// background-color: #cccccc;
  }
  nav{
