--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -5,7 +5,7 @@
 	  <li><%= link_to "消息通報", report_path %></li>
           
 	<% if current_user %>
-        <p class="navbar-text"><strong><%= current_user.name %></strong>軍師你好!</p><%= image_tag current_user.image, style: "display:inline-block" %>
+        <p class="navbar-text"><strong><%= link_to current_user.name, user_page_path(current_user.id) %></strong>軍師你好!</p><%= image_tag current_user.image, style: "display:inline-block" %>
         <%= link_to "登出", signout_path, id: "sign_out" %>
     <% else %>
         <li><%= link_to "facebook登入", "/auth/facebook", id: "sign_in" %></li>
