--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,6 +12,7 @@
   <% end %>
 
     <%= f.hidden_field :hearing_conference_id, :value => params[:hearing_conference_id] %>
+    <%= f.hidden_field :user_id, :value => current_user.id %>
   <div class="field">
     <%= f.label :title %><br>
     <%= f.text_field :title %>
